refactor: 객체 생성 시점, 조회 방어적 복사 적용